subdir('alsa')
subdir('cdparanoia')
subdir('gl')
if cc.get_id() != 'msvc'
  # FIXME: libvisual has MinGW-specific headers which are not compatible with
  # MSVC. Need to either fix the headers or build libvisual with MSVC too.
  subdir('libvisual')
endif
subdir('ogg')
subdir('opus')
subdir('pango')
subdir('theora')
subdir('vorbis')
