subdir('assrender')
subdir('aom')
subdir('bs2b')
subdir('bz2')
subdir('chromaprint')
subdir('closedcaption')
subdir('curl')
subdir('dash')
subdir('dc1394')
subdir('directfb')
subdir('dtls')
subdir('dts')
subdir('faac')
subdir('faad')
subdir('fdkaac')
subdir('flite')
subdir('fluidsynth')
subdir('gme')
subdir('gsm')
subdir('hls')
subdir('iqa')
subdir('kate')
subdir('ladspa')
subdir('libde265')
subdir('libmms')
subdir('lv2')
subdir('modplug')
subdir('mpeg2enc')
subdir('mplex')
subdir('musepack')
subdir('neon')
subdir('ofa')
subdir('openal')
subdir('opencv')
subdir('openexr')
subdir('openh264')
subdir('openjpeg')
subdir('openmpt')
subdir('openni2')
subdir('opus')
subdir('resindvd')
subdir('rsvg')
subdir('rtmp')
subdir('sbc')
subdir('sctp')
subdir('smoothstreaming')
subdir('sndfile')
subdir('soundtouch')
subdir('spandsp')
subdir('srt')
subdir('srtp')
subdir('teletextdec')
subdir('ttml')
subdir('voaacenc')
subdir('voamrwbenc')
subdir('vulkan')
subdir('wayland')
subdir('webrtc')
subdir('webrtcdsp')
subdir('webp')
subdir('wildmidi')
subdir('wpe')
subdir('x265')
subdir('zbar')
